align issue fix inlcude scroller

--- a/src/Components/School/AreaDetail.css
+++ b/src/Components/School/AreaDetail.css
@@ -47,6 +47,26 @@ td:nth-of-type(2) {
   background-color: #04AA6D;
   color: white;
 }
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Adjust the height to match your layout */
+}
+
+.spinner {
+  width: 100px;
+  height:100px;
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #3498db;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
 
 
  
